--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 
 header{
+    position: relative;
     margin: 0;
     width: 100%;
     height: 100%;
-    background-color: antiquewhite;
+    background-color: #f6f5ef;
+    padding-top: 10px;
+    border-top: 3px solid black;
 }
-header{
-    /* display: ;  */
-    /* justify-content: space-between;  */
-    width: 100%;
-    background-color: antiquewhite;
-    padding-top: 1em;
+.logo{
+    position: absolute;
+    top:15px;
+    left: 10px;
 }
 .header_1{ 
     /* float: right;  float랑 justify-content: end차이?*/
@@ -18,13 +19,15 @@ header{
     display: flex;
     height: 40px;
     list-style: none;
-    background-color: beige;
+    font: normal 13px Arial, georgia;
 }
 .header_1 li{
     padding-right: 1.5em;
 } 
 .search{
-    height: 30px;
+    background: none;
+    border: none;
+
 }
 .header_2{
     display: flex;
@@ -33,7 +36,8 @@ header{
     width: 100%;
     height: 40px;
     list-style: none;
-    background-color: lightblue;
+    font: normal 13px Arial, georgia;
+
 }
 .header_2 li{
     /* float: right; */
