--- a/style.css
+++ b/style.css
@@ -70,11 +70,16 @@ header{
     width: 100%;
     height: 700px;
     background: url('https://image.istarbucks.co.kr/upload/common/img/main/2022/2022_Summer1_main_bg.jpg');
+    display: flex;
+    justify-content: center;
 }
+
 .find_text img{
     display: block;
-    /* margin-top: 50px; 왜 yellow 전체가 움질일까? */
+    /* margin-top: 50px; 
+    왜 yellow 전체가 움질일까? */
     padding: 3em;
+
 }
 .find_text button{
     background: none;
@@ -85,17 +90,28 @@ header{
     width: 200px;
     height: 50px;
 }
-.coffee_imgs{
-    position: relative;
-    background-color: #f6f5ef;
+.coffees{
+    margin-left: 200px;
 }
 .rollin{
-    position: absolute;
-    top: -250px;
-    left: 400px;
+    margin-top: -300px;
+    margin-left: 350px;
 }
-.punch-img{
-    position: absolute;
-    top: -100px;
-    left: 200px;
+.punch_img{
+    margin-top: -250px;
+    margin-left: 420px;
+    width: 260px;
+    height: 400px; 
+}
+.punch_text{
+    margin-top: -250px;
+    margin-left: 150px;
+    width: 340px;
+    height: 400px; 
+}
+.pomelo{
+    margin-top: -640px;
+    margin-left: 850px;
+    width: 400px;
+    height: 500px; 
 }
